--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.18.0-5.6) vivid; urgency=medium
+
+  * Version 3.18.0-5.6
+
+ -- Leann Ogasawara <leann.ogasawara@canonical.com>  Mon, 01 Dec 2014 10:39:03 -0800
+
 linux-signed (3.18.0-4.5) vivid; urgency=medium
 
   * Version 3.18.0-4.5
