--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (3.18.0-6.7) vivid; urgency=medium
+
+  * Version 3.18.0-6.7
+
+ -- Leann Ogasawara <leann.ogasawara@canonical.com>  Mon, 08 Dec 2014 09:28:55 -0800
+
 linux-signed (3.18.0-5.6) vivid; urgency=medium
 
   * Version 3.18.0-5.6
