--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-signed (4.4.0-9.24) xenial; urgency=medium
+
+  * Version 4.4.0-9.24
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Mon, 29 Feb 2016 12:19:07 -0700
+
 linux-signed (4.4.0-8.23) xenial; urgency=medium
 
   * Version 4.4.0-8.23
